--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "homepage": "https://affanraza84.github.io/My-Portfoio-Affan-",
+  "homepage": "https://affanraza84/github.io.My-Portfolio-Affan-",
   "name": "reactportfolio",
   "private": true,
   "version": "0.0.0",
